@@ -18,7 +18,7 @@ AC_CONFIG_HEADER([config.h])
 GWENHYWFAR_VERSION_MAJOR=0
 GWENHYWFAR_VERSION_MINOR=9
 GWENHYWFAR_VERSION_PATCHLEVEL=13
-GWENHYWFAR_VERSION_BUILD=13
+GWENHYWFAR_VERSION_BUILD=14
 dnl "stable", "rcX", "betaX", "cvs"
 GWENHYWFAR_VERSION_TAG="cvs"
 GWENHYWFAR_VERSION_FULL_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL.$GWENHYWFAR_VERSION_BUILD${GWENHYWFAR_VERSION_TAG}"
@@ -77,9 +77,9 @@ AC_DEFINE_UNQUOTED(GWENHYWFAR_VERSION_TAG,$GWENHYWFAR_VERSION_TAG, [tag])
 #
 # SO version
 #
-GWENHYWFAR_SO_CURRENT="14"
+GWENHYWFAR_SO_CURRENT="15"
 GWENHYWFAR_SO_REVISION="0"
-GWENHYWFAR_SO_AGE="1"
+GWENHYWFAR_SO_AGE="0"
 GWENHYWFAR_SO_EFFECTIVE="`echo \$(($GWENHYWFAR_SO_CURRENT-$GWENHYWFAR_SO_AGE))`"
 
 AC_SUBST(GWENHYWFAR_SO_CURRENT)
